<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="buildbotdb">Open Dropbox Buildbot folder (maybe with errors)</string>
    <string name="app_name">UpdateChecker</string>
    <string name="installedver">1.1-2</string>
    <string name="version">cannot read current build</string>
    <string name="installed">Installed version: </string>
    <string name="refresh">Refresh</string>
    <string name="waittext">If you\'re waiting longer than 10 seconds, please check your network connection!</string>
    <string name="wait">Please wait...</string>
    <string name="current">Current version: </string>
    <string name="ready">New build online!</string>
    <string name="delold">Delete downloaded file</string>
    <string name="downloadnew">Download new version (delete old version first!)</string>
    <string name="flashfile">Flash downloaded version</string>
    <string name="explwhyuser">Of cause it\'\s not required to enter your username. But if you have got any \'\special needs\'\ e.g. the possibility to order special notifications you will have to fill in the gap. Otherwise I won\'\t have the possibility to identify your device and you won\'\t be able to use this services. Entering your username later is not possible but I can remove it for you if you wish. Of cause I won\'\t give your data to others. You will find more information on the HTC Desire HD CyanogenMod 10.1 thread on Android-Hilfe.de (german forum).</string>
    <string name="updmenu">Update menu</string>
    <string name="deleted">Deleted! :-)</string>
    <string name="notnew">Not my CM ROM or an old version installed</string>
    <string name="easter">Happy easter! :-)</string>
    <string name="nothing">nothing ;-)</string>
        <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">device successfully registered!</string>
    <string name="gcm_unregistered">device successfully unregistered!</string>
    <string name="gcm_message">you got message!</string>
    <string name="updated">current version updated!</string>
    <string name="whyuser">Why my username?</string>
    <string name="gcm_error">error (%1$s).</string>
    <string name="gcm_recoverable_error">recoverable error (%1$s).</string>
    <string name="gcm_deleted">server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on UpdateChecker Server.</string>
    <string name="server_registered">From UpdateChecker Server: successfully added device!</string>
    <string name="server_unregistered">From UpdateChecker Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="list_cm_changes">CM-Changes</string>
</resources>